[package]
name = "global_git_contribution_graph_api"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = "7.2.1"
async-graphql-axum = "7.2.1"
async-trait = "0.1.89"
axum = "0.8.8"
chrono = {version = "0.4.43", features = ["serde"]}
reqwest = {version = "0.13.2", features = ["json"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tokio = {version = "1.49.0", features = ["full"]}
